[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby_UI.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.631373, 0.686275, 1 )

[node name="list" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 61.0
margin_bottom = -110.0
mouse_filter = 2

[node name="vsplit" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 64
dragger_visibility = 2

[node name="head" type="Control" parent="vsplit"]
margin_right = 1024.0
margin_bottom = 64.0

[node name="Title" type="Label" parent="vsplit/head"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -7.0
margin_right = 75.0
margin_bottom = 7.0
text = "LOBBY"

[node name="leave_lobby" type="Button" parent="vsplit/head"]
margin_left = 94.0
margin_top = 22.0
margin_right = 185.0
margin_bottom = 42.0
text = "Leave Lobby"

[node name="Container" type="Container" parent="vsplit"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="mc" type="MarginContainer" parent="vsplit/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="hsplit" type="HSplitContainer" parent="vsplit/Container/mc"]
margin_right = 992.0
margin_bottom = 520.0
custom_constants/separation = 16
split_offset = 300
dragger_visibility = 1

[node name="settings" type="Panel" parent="vsplit/Container/mc/hsplit"]
margin_right = 300.0
margin_bottom = 520.0

[node name="vsplit" type="VSplitContainer" parent="vsplit/Container/mc/hsplit"]
margin_left = 316.0
margin_right = 992.0
margin_bottom = 520.0
custom_constants/separation = 16
split_offset = 300
dragger_visibility = 1

[node name="Panel" type="PanelContainer" parent="vsplit/Container/mc/hsplit/vsplit"]
margin_right = 676.0
margin_bottom = 314.0

[node name="player_list" type="VBoxContainer" parent="vsplit/Container/mc/hsplit/vsplit/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 669.0
margin_bottom = 307.0

[node name="hsplit" type="HSplitContainer" parent="vsplit/Container/mc/hsplit/vsplit"]
margin_top = 330.0
margin_right = 676.0
margin_bottom = 520.0
custom_constants/separation = 16
split_offset = 300
dragger_visibility = 1

[node name="chat" type="Panel" parent="vsplit/Container/mc/hsplit/vsplit/hsplit"]
margin_right = 300.0
margin_bottom = 190.0

[node name="buttons" type="Panel" parent="vsplit/Container/mc/hsplit/vsplit/hsplit"]
margin_left = 316.0
margin_right = 676.0
margin_bottom = 190.0

[connection signal="pressed" from="vsplit/head/leave_lobby" to="." method="_on_leave_lobby_pressed"]
